--- a/frontend/admin/users.html
+++ b/frontend/admin/users.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
@@ -19,7 +20,7 @@
       }
     </style>
   </head>
-  
+
   <body class="bg-slate-50 flex min-h-screen font-sans custom-scrollbar">
     <aside
       class="w-72 bg-slate-900 sticky top-0 h-screen text-white p-8 shadow-2xl flex flex-col"
@@ -29,7 +30,6 @@
           MISHRA <span class="text-orange-500">INDUSTRIES</span>
         </h2>
       </div>
-
       <nav class="space-y-3 flex-1">
         <a
           href="site-editor.html"
@@ -75,7 +75,6 @@
           >
         </a>
       </nav>
-
       <a
         href="../index.html"
         class="flex items-center space-x-4 p-4 text-slate-500 hover:text-red-400 transition-all border-t border-slate-800"
@@ -84,7 +83,7 @@
         <span class="font-bold text-sm">Logout Console</span>
       </a>
     </aside>
-      
+
     <main class="flex-1 p-12 overflow-y-auto">
       <header class="flex justify-between items-center mb-12">
         <div>
@@ -94,18 +93,41 @@
             Directory
           </h1>
           <p class="text-gray-400 font-bold text-xs uppercase tracking-[0.3em]">
-            Mishra Industries User Database
+            User Database
           </p>
         </div>
-        <button onclick="deleteAllUsers()" class="border-2 border-red-500 text-red-500 px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-red-500 hover:text-white transition-all">
-            <i class="fas fa-user-slash mr-2"></i> Delete All Users
-        </button>
-        <a
-          href="../index.html"
-          class="bg-blue-900 text-white px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-orange-500 transition-all"
-          >Back to Home</a
-        >
+        <div class="flex gap-4">
+          <button
+            onclick="exportToExcel()"
+            class="bg-emerald-600 text-white px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-emerald-700 transition-all"
+          >
+            <i class="fas fa-file-excel mr-2"></i> Export Excel
+          </button>
+          <button
+            onclick="deleteAllUsers()"
+            class="border-2 border-red-500 text-red-500 px-6 py-3 rounded-2xl font-bold text-xs uppercase tracking-widest hover:bg-red-500 hover:text-white transition-all"
+          >
+            <i class="fas fa-user-slash mr-2"></i> Delete All
+          </button>
+        </div>
       </header>
+
+      <div class="mb-10 relative group">
+        <div
+          class="absolute inset-y-0 left-0 pl-6 flex items-center pointer-events-none"
+        >
+          <i
+            class="fas fa-search text-slate-400 group-focus-within:text-orange-500 transition-colors"
+          ></i>
+        </div>
+        <input
+          type="text"
+          id="directorySearch"
+          onkeyup="filterUsers()"
+          placeholder="Search by Name, Email, or GST..."
+          class="w-full bg-white border-2 border-slate-100 rounded-[2rem] py-5 pl-16 pr-8 outline-none focus:border-orange-500 shadow-sm transition-all font-bold text-sm text-blue-900 placeholder:text-slate-300"
+        />
+      </div>
 
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
         <section
@@ -161,7 +183,6 @@
         </section>
       </div>
     </main>
-
     <script src="../js/user_directory.js"></script>
   </body>
 </html>
