--- a/frontend/index.html
+++ b/frontend/index.html
@@ -542,7 +542,250 @@
       </div>
     </section>
 
+    <footer class="bg-[#2d2d2d] text-white pt-16 pb-8 mt-20">
+      <div class="container mx-auto px-6">
+        <div
+          class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-6 gap-12 mb-16"
+        >
+          <div class="space-y-4">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              About Us
+            </h4>
+            <ul class="text-xs space-y-3 text-slate-400 font-bold">
+              <li>
+                <a href="#team" class="hover:text-orange-500 transition-colors"
+                  >Who We Are</a
+                >
+              </li>
+              <li>
+                <a href="#about" class="hover:text-orange-500 transition-colors"
+                  >Our Legacy</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#contact"
+                  class="hover:text-orange-500 transition-colors"
+                  >Contact Us</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="space-y-4">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              Support
+            </h4>
+            <ul class="text-xs space-y-3 text-slate-400 font-bold">
+              <li>
+                <a
+                  href="support-hub.html#faqs"
+                  class="hover:text-orange-500 transition-colors"
+                  >Order FAQs</a
+                >
+              </li>
+              <li>
+                <a
+                  href="payment.html"
+                  class="hover:text-orange-500 transition-colors"
+                  >Payment Methods</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#shipping"
+                  class="hover:text-orange-500 transition-colors"
+                  >Shipping Policy</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#returns"
+                  class="hover:text-orange-500 transition-colors"
+                  >Returns & Refunds</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-orange-500 transition-colors"
+                  >Track Order</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="space-y-4">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              Policies
+            </h4>
+            <ul class="text-xs space-y-3 text-slate-400 font-bold">
+              <li>
+                <a
+                  href="support-hub.html#terms"
+                  class="hover:text-orange-500 transition-colors"
+                  >Terms of Use</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#privacy"
+                  class="hover:text-orange-500 transition-colors"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#gst"
+                  class="hover:text-orange-500 transition-colors"
+                  >GST Compliance</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#warranty"
+                  class="hover:text-orange-500 transition-colors"
+                  >Warranty Info</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="space-y-4">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              B2B Portal
+            </h4>
+            <ul class="text-xs space-y-3 text-slate-400 font-bold">
+              <li>
+                <a
+                  href="register.html"
+                  class="hover:text-orange-500 transition-colors"
+                  >Partner Benefits</a
+                >
+              </li>
+              <li>
+                <a
+                  href="support-hub.html#bulk"
+                  class="hover:text-orange-500 transition-colors"
+                  >Bulk Quotations</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="space-y-4">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              Stay Connected
+            </h4>
+            <ul class="text-xs space-y-3 text-slate-400 font-bold">
+              <li>
+                <a
+                  href="https://wa.me/919473056840?text=I%20want%20to%20enquire%20about%20electrical%20products"
+                  target="_blank"
+                  class="hover:text-[#25D366] transition-colors flex items-center gap-2"
+                  ><i class="fab fa-whatsapp"></i> WhatsApp Support</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:mishraindustriesltd@gmail.com"
+                  class="hover:text-orange-500 transition-colors flex items-center gap-2"
+                  ><i class="fas fa-envelope"></i> Email Support</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="hover:text-[#00acee] transition-colors flex items-center gap-2"
+                  ><i class="fab fa-twitter"></i> Twitter/X</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="hover:text-[#e1306c] transition-colors flex items-center gap-2"
+                  ><i class="fab fa-instagram"></i> Instagram</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="hover:text-[#3b5998] transition-colors flex items-center gap-2"
+                  ><i class="fab fa-facebook"></i> Facebook</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="space-y-4 col-span-1 md:col-span-3 lg:col-span-1">
+            <h4
+              class="text-sm font-black uppercase tracking-widest border-b border-white/10 pb-2"
+            >
+              Our Office
+            </h4>
+            <div
+              class="text-[10px] space-y-2 text-slate-400 leading-relaxed font-bold uppercase"
+            >
+              <p >
+                Mishra Industries Limited
+              </p>
+              <p>CIN: U51909KA2008PTC046721P</p>
+              <p>GSTIN: 29AAFCM5975L1ZO</p>
+              <p>Purulia Road, Tatisilwai, Ranchi, Jharkhand: 835103, INDIA</p>
+              <p>Contact: +91 94730 56840</p>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="border-t border-white/10 pt-8 flex flex-col md:flex-row justify-between items-center gap-6"
+        >
+          <div
+            class="flex gap-4 text-[10px] font-black uppercase tracking-widest text-slate-500"
+          >
+            <a href="#" class="hover:text-white">Sitemap</a>
+            <span>|</span>
+            <a href="#" class="hover:text-white">Legal Notice</a>
+          </div>
+
+          <p
+            class="text-[10px] font-black uppercase tracking-[0.2em] text-center text-slate-400"
+          >
+            MISHRA INDUSTRIES LIMITED © 2026. All Rights Reserved.
+          </p>
+
+          <div class="flex items-center gap-4 bg-white/5 px-4 py-2 rounded-xl">
+            <i
+              class="fab fa-cc-visa text-xl opacity-60 hover:opacity-100 transition-opacity"
+              title="Visa Card Accepted"
+            ></i>
+            <i
+              class="fab fa-cc-mastercard text-xl opacity-60 hover:opacity-100 transition-opacity"
+              title="Mastercard Accepted"
+            ></i>
+            <img
+              src="https://img.icons8.com/color/48/upi.png"
+              class="w-8 h-8 opacity-60 hover:opacity-100 transition-opacity grayscale"
+              alt="UPI Payments"
+            />
+            <i
+              class="fas fa-shield-alt text-xl text-green-500"
+              title="Secure Payment Node"
+            ></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
-    </body>
+  </body>
 </html>
